responsive styling complete for nav, hero, About: features section and second features section for laptop and tablets, still pending for mobile devices and project pages and components restructured

--- a/frontend/src/components/MainHeader/MainHeader.css
+++ b/frontend/src/components/MainHeader/MainHeader.css
@@ -1,91 +1,17 @@
-.main__header{
-    height: 100vh;
-    /* background: blue; */
-    
-    display: flex;
-    z-index: 99;
+.main__header {
+    background: linear-gradient(
+        to bottom,
+        aliceblue 0%,
+        rgb(151, 171, 192) 80%,
+        white 80%,
+        white 100%
+    );
+    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 }
 
 .main__header__container {
-    position: relative;
+    background: url('../../assets/mathsHero.png') center center/cover no-repeat;
+    height: 60vh;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
-
-.main__header__content {
-    /* background: red; */
-    /* height: 100%; */
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    gap: 1rem;
-    margin-top: 8rem;
-    /* flex-direction: column; */
-    /* justify-content: center;
-    object-fit: contain; */
-}
-
-.left-div, .right-div {
-/* width: 10%; */
-}
-
-.middle-div {
-/* width: 80%; */
-text-align: center;
-}
-
-.left-div {
-    padding-left: 7rem;
-    color: rgb(3, 60, 83);
-}
-
-.left-div > h3 {
-    color: rgb(3, 60, 83);
-}
-
-.right-div {
-    text-align: left;
-    color: rgb(12, 90, 122);
-}
-
-.right-div > nav {
-    font-size: 12px;
-    float: right;
-    padding-right: 7rem;
-}
-
-.main__header__container > img {
-    width: 100%;
-    object-fit: cover;
-    position: absolute;
-    z-index: -1;
-}
-
-.main__header__buttons {
-    justify-content: center;
-    text-align: center;
-    display: flex;
-    gap: 1rem;
-    margin-top: 10px;
-}
-
-.main__header__ad > h1 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 3rem;
-    /* color: rgb(12, 90, 122); */
-}
-
-.main__header__ad > h2 {
-    font-family: 'Poppins', sans-serif;
-    margin-top: 1rem;
-    font-size: 1rem;
-    /* color: rgb(12, 90, 122); */
-}
-
-.main__header__buttons > button {
-    margin-top: 0.5rem;
-    border-radius: 1rem;
-    padding: 7px 21px;
-    /* border-color: darkblue; */
-    border: 1px solid rgb(12, 90, 122);
-    background: transparent;
-    color: rgb(12, 90, 122);
-}
