--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -17,6 +17,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
+    padding: 0 2rem;
 }
 
 /* https://www.midjourney.com/app/jobs/8a3bca15-994f-4d9e-bb09-9ab6364ef6df/ */
