--- a/frontend/src/components/About/about.css
+++ b/frontend/src/components/About/about.css
@@ -33,7 +33,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 30px;
-    padding: 0 2rem;
+    padding: 2rem;
 }
 
 .article p, .article h1{
@@ -44,10 +44,11 @@
 .article h1 {
     font-size: 20px;
     color: #4a7ea1;
+    padding-bottom: 1rem;
 }
 
 .article p {
-    padding-top: 1rem;
+    /* padding-top: 1rem; */
     font-size: 12px;
     color: var(--secondary);
 }
@@ -57,6 +58,10 @@
     /* background: url('../../assets/mathstudent.png') center center/cover no-repeat; */
 }
 
+.about__bottom__right__section img {
+    /* width: 100%; */
+    height: 100%;
+}
 
 /* need to find a better way */
 .about__bottom__left__section {
@@ -67,13 +72,32 @@
     margin-top: 2rem;
 }
 
+.about__icons {
+    color: #4a7ea1;
+    font-size: 40px;
+}
+
+.article__first__row, .article__second__row {
+    /* padding-top: 1rem; */
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+.article__second__row {
+    margin-top: 1rem;
+}
+
 @media (max-width: 720px) {
     .feature__articles {
         grid-template-columns: 1fr 1fr;
     }
 
+    .about__container__top{
+        height: fit-content;
+    }
     .about__container__bottom {
         grid-template-columns: 1fr;
+        height: fit-content;
         /* grid-template-areas: 'right' 'left'; */
     }
 }
