--- a/frontend/src/components/About/about.css
+++ b/frontend/src/components/About/about.css
@@ -1,11 +1,5 @@
-/* .features {
-    position: relative;
-    display: flex;
-} */
-
 .about{
-    height: 100vh;
-    /* background: red; */
+    height: 100%;
 }
 
 .about__container__top {
@@ -14,19 +8,18 @@
     display: grid;
     justify-content: center;
     align-items: center;
-    /* box-shadow: ; */
 }
 
 .about__container__bottom {
     margin-top: 1rem;
-    background: #8CD5F3;
+    background: whitesmoke;
+    /* background: #dfe0e3; */
     height: 58vh;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
     justify-content: center;
-    /* align-items: center; */
+    margin-bottom: 1rem;
 }
 
 .feature__articles {
@@ -36,7 +29,7 @@
     padding: 2rem;
 }
 
-.article p, .article h1{
+.feature__articles > .article p, .article h1{
     text-align: left;
 }
 
@@ -48,18 +41,15 @@
 }
 
 .article p {
-    /* padding-top: 1rem; */
     font-size: 12px;
     color: var(--secondary);
 }
 
 .about__bottom__right__section {
     overflow: hidden;
-    /* background: url('../../assets/mathstudent.png') center center/cover no-repeat; */
 }
 
 .about__bottom__right__section img {
-    /* width: 100%; */
     height: 100%;
 }
 
@@ -67,6 +57,12 @@
 .about__bottom__left__section {
     padding: 2rem 2rem;
 }
+
+.about__bottom__left__section > article > p {
+    color: #3176a3;
+    font-size: 14px;
+}
+
 /* need to find a better way */
 .about__bottom__left__section > article:nth-child(2) {
     margin-top: 2rem;
@@ -78,7 +74,6 @@
 }
 
 .article__first__row, .article__second__row {
-    /* padding-top: 1rem; */
     display: grid;
     grid-template-columns: 1fr 4fr;
 }
@@ -86,6 +81,36 @@
 .article__second__row {
     margin-top: 1rem;
 }
+
+.about__buttons {
+    display: flex;
+    gap: 20px;
+}
+
+.about__buttons > button {
+    margin-top: 3rem;
+    border: 1px solid white;
+    padding: 0.5rem 1.5rem;
+    border-radius: 3rem;
+}
+
+.about__bottom__left__section:hover {
+    background: whitesmoke;
+    transition: 500ms;
+}
+
+@media (max-width: 1155px) {
+
+    .about__container__top{
+        height: fit-content;
+    }
+
+    .about__container__bottom {
+        grid-template-columns: 1fr;
+        height: fit-content;
+    }
+}
+
 
 @media (max-width: 720px) {
     .feature__articles {
@@ -95,10 +120,10 @@
     .about__container__top{
         height: fit-content;
     }
+
     .about__container__bottom {
         grid-template-columns: 1fr;
         height: fit-content;
-        /* grid-template-areas: 'right' 'left'; */
     }
 }
 
