--- a/frontend/src/components/MainHeader/MainHeader.css
+++ b/frontend/src/components/MainHeader/MainHeader.css
@@ -10,7 +10,7 @@
 }
 
 .main__header__container {
-    background: url('../../assets/mathsHero.png') center center/cover no-repeat;
+    background: url('../../assets/mathsbg3cropped.png') center bottom/cover no-repeat;
     height: 60vh;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
