--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -40,7 +40,8 @@
 
 .navbar__links__members {
     border: 1px solid white;
-    padding: 0.5rem;
+    padding: 0.5rem 1.5rem;
+    border-radius: 3rem;
 }
 
 .navbar__links a:hover {
