added framer motion effects to Home page components and fixed responsive bugs on phone devices so content fits correctly on landscape and added custom slider component to research bottom component

--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -13,6 +13,7 @@
 
 .navbar__container {
     height: 100%;
+    /* background: blue; */
     display: flex;
     justify-content: space-between;
     align-items: center;
